[package]
edition = "2018"
name = "mypgproxy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
clap = "3.0.0-beta.2"
futures = "0.3"
tokio = {version = "1.12.0", features = ["full"]}
tokio-rustls = "0.22.0"
tokio-util = {version = "0.6.8", features = ["codec"]}
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.68"
toml = "0.5.8"
env_logger = "0.9.0"
log = "0.4.0"
socket2 = "0.4.2"
