[package]
name = "cminer"
edition = "2018"
version = "0.3.1"
authors = ["Wspsxing <biluohc@qq.com>"]
description = "A cpuminer impl by Rust, supported currency(CKB, BTC, ETH, ETC, KAS..)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[features]
default = [ "btc-openssl" ]
# cargo build --release  --no-default-features --features btc-ring
# 4.3m+-@2c-9880H
btc-openssl = [ "openssl" ]
# 4.0m+-@2c-9880H
btc-ring = [ "ring" ]

[dependencies]
nonblock-logger = { version = "0.2", features = [ "color", "dbg" ] }
serde = { version = "1.0.101", features = ["derive"] }
bigint = { package = "ethereum-types", version = "0.8.0" }
openssl = { version = "0.10.35", features = ["vendored"], optional = true }
kaspow = { path = "./kaspow" }
ring = { version = "0.16.20", optional = true } # version used by rustls
thiserror = "1.0.5"
clap = {version = "3.1.8", features = ["derive"]}
anyhow = "1.0.19"
serde_json = "1.0.45"
parking_lot = "0.12.0"
bytesize = "1.0.0"
base64 = "0.13.0"
faster-hex = "0.6.0"
eaglesong = "0.1"
ckb-hash = "0.42.0"
bitcoin_hashes = "0.10"
bitcoin = "0.27"
ethash = "0.4.0"
ctrlc = "3.1.3"
rayon = "1.3.0"
num_cpus = "1"
digest = "0.9.0"
bytes = "1.0.1"
hex = "0.4.2"
rand = "0.7.3"
sha3 = "0.9.1"

futures = "0.3.2"
tokio = { version = "1.17", features = ["rt", "net", "sync", "time", "io-util"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-rustls = { version = "0.22", features = ["dangerous_configuration"] }
webpki-roots = "0.21"
url = "2.2"
