[package]
name = "hashes"
edition = "2021"
version = "0.1.0"

[features]
no-asm = ["keccak"]

[dependencies]
# borsh.workspace = true
faster-hex = "0.6"
serde = { version = "1", features = ["derive"] }
blake2b_simd = "1"
sha2 = "0.10"
once_cell = "1"
keccak = { version = "0.1", optional = true }

[target.'cfg(any(target_os = "windows", not(target_arch = "x86_64")))'.dependencies]
keccak = "0.1"

[dev-dependencies]
criterion = { version = "0.4", default-features = false }
rand = "0.8"
sha3 = "0.10"

[build-dependencies]
cc = "1"

[[bench]]
name = "bench"
harness = false

